# vigilante

./: .env.example  .gitignore  API_REFERENCE.md  Cargo.toml  README.md  README_SSE.md  README_WebRTC.md  fix_drive.sh  test_panel.html  test_webrtc_av.html
.github/workflows/: ci.yml
configs/: pipeline_template.txt
src/: auth.rs  camera.rs  error.rs  events.rs  lib.rs  logs.rs  main.rs  metrics.rs  ptz.rs  status.rs  storage.rs  stream.rs
src/auth/: mod.rs
src/auth/depends/: bypass.rs  check.rs  extractor.rs  middleware.rs  mod.rs
src/camera/: mod.rs
src/camera/depends/: ffmpeg.rs  mjpeg.rs  mod.rs  motion.rs  simple_pipeline.rs  utils.rs
src/logs/: mod.rs
src/logs/depends/: journal.rs  mod.rs
src/metrics/: mod.rs
src/metrics/depends/: collectors.rs  mod.rs
src/ptz/: mod.rs
src/ptz/depends/: client.rs  commands.rs  mod.rs  soap.rs
src/state/: mod.rs
src/status/: mod.rs
src/status/depends/: mod.rs  system.rs
src/storage/: mod.rs
src/storage/depends/: db.rs  filesystem.rs  mod.rs  paths.rs  snapshot.rs
src/stream/: mod.rs
src/stream/depends/: audio.rs  mod.rs  webrtc.rs  websocket.rs
src/utils/: fs_cleanup.rs  mod.rs
