[package]
name = "vigilante"
version = "0.1.0"
edition = "2021"

[features]
default = []
tokio-console = ["console-subscriber"]

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3"
futures = "0.3"
rand = "0.8"
sha1 = "0.10"
base64 = "0.22"
uuid = { version = "1.8", features = ["v4", "fast-rng"] }
fs2 = "0.4"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
shell-escape = "0.1"
quick-xml = "0.31"
url = "2"
log = "0.4"
simplelog = "0.12"
console-subscriber = { version = "0.2", optional = true }

# Prometheus metrics
prometheus = "0.14"
lazy_static = "1.4"

# SQLite for persistent metadata cache
rusqlite = { version = "0.31", features = ["bundled"] }

# GStreamer dependencies unified to version 0.22
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-video = "0.22"
gstreamer-pbutils = "0.22"
gstreamer-webrtc = "0.22"
gstreamer-sdp = "0.22"
tokio-stream = { version = "0.1.17", features = ["sync"] }

[dev-dependencies]
rstest = "0.26.1"
tokio-test = "0.4.4"
